# GIS

./: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  CoordinatesMath.h  Double.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EntityJsonParser.cpp  EntityJsonParser.h  GIS.cpp  GIS.h  GISNamedTypes.h  GISProvider.h  GISdefs.h  Geometry.h  GeometryJsonParser.cpp  GeometryJsonParser.h  IdGenerator.h  Junction.h  Logger.cpp  Logger.h  NamedType.h  NavigationGIS.cpp  NavigationGIS.h  POI.cpp  POI.h  Polygon.h  README.md  Restrictions.cpp  Restrictions.h  Utils.cpp  Utils.h  Way.cpp  Way.h  _tests.cpp  internalTests.cpp  israel.json  (+6 more)
Common/: AbstractGIS.h  AbstractNavigation.h  AbstractWay.h  CoordinatesMath.h  Double.h  GISNamedTypes.h  GISRegistration.h  NamedType.h  NavigationGIS.h  NavigationRegistration.h  Restrictions.h
GIS/: GIS.cpp  GIS.h  GISProvider.h  GIS_315524694.cpp  GIS_315524694.h  Way.cpp  Way.h  makefile
Navigation/: AStar.cpp  AStar.h  Navigation.cpp  Navigation.h  NavigationProvider.h  Navigation_315524694.cpp  Navigation_315524694.h  Route.cpp  Route.h  Routes.cpp  Routes.h  makefile
Simulator/: GISContainer.cpp  GISContainer.h  GISRegistration.cpp  NavigationContainer.cpp  NavigationContainer.h  NavigationRegistration.cpp  NavigationRequest.cpp  NavigationRequest.h  NavigationScores.cpp  NavigationScores.h  NavigationTask.cpp  NavigationTask.h  NavigationTasksManager.cpp  NavigationTasksManager.h  NavigationValidator.cpp  NavigationValidator.h  Registrar.cpp  Registrar.h  RequestResult.cpp  RequestResult.h  RequestsFileParser.cpp  (+11 more)
(+192 files in other folders)
